--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-router-dom": "^6.8.2",
         "react-scripts": "5.0.1",
         "typescript": "^4.4.2",
+        "uuid": "^9.0.0",
         "web-vitals": "^2.1.0",
         "zustand": "^4.3.5"
     },
@@ -53,6 +54,7 @@
     "devDependencies": {
         "@graphql-codegen/cli": "3.2.1",
         "@graphql-codegen/client-preset": "2.1.0",
+        "@types/uuid": "^9.0.1",
         "@typescript-eslint/eslint-plugin": "^5.54.0",
         "@typescript-eslint/parser": "^5.54.0",
         "eslint": "^7.32.0 || ^8.2.0",
