--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
-    "name": "my-pokemon",
+    "name": "study-graphql",
     "version": "1.0.0",
     "private": true,
     "dependencies": {
         "@apollo/client": "^3.7.9",
         "@heroicons/react": "^2.0.16",
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^13.0.0",
-        "@testing-library/user-event": "^13.2.1",
-        "@types/jest": "^27.0.1",
-        "@types/node": "^16.7.13",
-        "@types/react": "^18.0.0",
-        "@types/react-dom": "^18.0.0",
         "graphql": "^16.6.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.8.2",
         "react-scripts": "5.0.1",
-        "typescript": "^4.4.2",
         "uuid": "^9.0.0",
         "web-vitals": "^2.1.0",
         "zustand": "^4.3.5"
@@ -54,22 +46,31 @@
     "devDependencies": {
         "@graphql-codegen/cli": "3.2.1",
         "@graphql-codegen/client-preset": "2.1.0",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^13.0.0",
+        "@testing-library/user-event": "^13.2.1",
+        "@types/jest": "^27.0.1",
+        "@types/node": "^16.7.13",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
         "@types/uuid": "^9.0.1",
         "@typescript-eslint/eslint-plugin": "^5.54.0",
         "@typescript-eslint/parser": "^5.54.0",
         "eslint": "^7.32.0 || ^8.2.0",
         "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-prettier": "^8.6.0",
+        "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-jsx-a11y": "^6.5.1",
-        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
         "husky": "^8.0.0",
         "lint-staged": "^13.1.2",
-        "msw": "^1.1.0",
-        "prettier": "^2.8.4",
-        "tailwindcss": "^3.2.7"
+        "msw": "^1.2.3",
+        "prettier": "^3.0.1",
+        "prettier-plugin-tailwindcss": "^0.4.1",
+        "tailwindcss": "^3.3.3",
+        "typescript": "^5.1.6"
     },
     "lint-staged": {
         "*.{tsx,ts,jsx,js}": [
